@@ -13,6 +13,7 @@ export(aggPSUNASC)
 export(aggregateBySpeciesCategory)
 export(appendToListKeepAttr)
 export(applyParlist)
+export(as.dataFrame_full)
 export(as.matrix_full)
 export(baseline2eca)
 export(bootstrapOneIteration)
