@@ -80,6 +80,8 @@ install.packages("ftp://ftp.imr.no/StoX/Download/Rstox/Versions/Alpha/Rstox_1.9.
 
 # 17. Removed the option 'quiet' in downloadXML(), which is replaced by 'msg'.
 
+# 18. Added support for NMD API version 2 in getMNDinfo() and getNMDdata(). The output from getMNDinfo("platform") now coincides with that from getMNDinfo("v"), being a data frame with all entries of all platforms, where some platforms can have multiple entries. Before getMNDinfo("v") returned only the last entry of each platform.
+
 
 
 # For historical release notes see https://github.com/Sea2Data/Rstox/blob/alpha/NEWS
