@@ -690,6 +690,8 @@ Removed the option 'quiet' in downloadXML(), which is replaced by 'msg'.
 
 Added support for NMD API version 2 in getMNDinfo() and getNMDdata(). The output from getMNDinfo("platform") now coincides with that from getMNDinfo("v"), being a data frame with all entries of all platforms, where some platforms can have multiple entries. Before getMNDinfo("v") returned only the last entry of each platform.
 
+Added the option getMNDinfo("cruise") or getMNDinfo("cruises"), for returning a list of all cruises.
+
 
 ########## Version 1.10 (2018-07-06) ##########
 
@@ -728,4 +730,7 @@ Changed the name of baseline2eca() to getCovData(). The old function kept for ba
 Removed the option 'quiet' in downloadXML(), which is replaced by 'msg'.
 
 Added support for NMD API version 2 in getMNDinfo() and getNMDdata(). The output from getMNDinfo("platform") now coincides with that from getMNDinfo("v"), being a data frame with all entries of all platforms, where some platforms can have multiple entries. Before getMNDinfo("v") returned only the last entry of each platform.
+
+Added the option getMNDinfo("cruise") or getMNDinfo("cruises"), for returning a list of all cruises.
+
 
